--- a/contributed_modules.html
+++ b/contributed_modules.html
@@ -111,23 +111,6 @@
  <li>
   <dl>
    <dt>
-    simplesamlphp-module-aggregator
-   </dt>
-   <dd>
-    This is a module for SimpleSAMLphp that aggregates a set of SAML entities into SAML 2.0 metadata documents.
-   </dd>
-  </dl>
-  <ul>
-   <li>
-    <a href="https://github.com/simplesamlphp/simplesamlphp-module-aggregator">
-     Repository
-    </a>
-   </li>
-  </ul>
- </li>
- <li>
-  <dl>
-   <dt>
     simplesamlphp-module-aggregator2
    </dt>
    <dd>
@@ -162,40 +145,6 @@
  <li>
   <dl>
    <dt>
-    simplesamlphp-module-authfacebook
-   </dt>
-   <dd>
-    Authentication module to authenticate against Facebook
-   </dd>
-  </dl>
-  <ul>
-   <li>
-    <a href="https://github.com/simplesamlphp/simplesamlphp-module-authfacebook">
-     Repository
-    </a>
-   </li>
-  </ul>
- </li>
- <li>
-  <dl>
-   <dt>
-    simplesamlphp-module-authlinkedin
-   </dt>
-   <dd>
-    Authentication module to authenticate against LinkedIn
-   </dd>
-  </dl>
-  <ul>
-   <li>
-    <a href="https://github.com/simplesamlphp/simplesamlphp-module-authlinkedin">
-     Repository
-    </a>
-   </li>
-  </ul>
- </li>
- <li>
-  <dl>
-   <dt>
     simplesamlphp-module-authorize
    </dt>
    <dd>
@@ -222,23 +171,6 @@
   <ul>
    <li>
     <a href="https://github.com/simplesamlphp/simplesamlphp-module-authtwitter">
-     Repository
-    </a>
-   </li>
-  </ul>
- </li>
- <li>
-  <dl>
-   <dt>
-    simplesamlphp-module-authwindowslive
-   </dt>
-   <dd>
-    Authentication module to authenticate against Windows Live
-   </dd>
-  </dl>
-  <ul>
-   <li>
-    <a href="https://github.com/simplesamlphp/simplesamlphp-module-authwindowslive">
      Repository
     </a>
    </li>
@@ -375,6 +307,431 @@
   <ul>
    <li>
     <a href="https://github.com/simplesamlphp/simplesamlphp-module-consentadmin">
+     Repository
+    </a>
+   </li>
+  </ul>
+ </li>
+ <li>
+  <dl>
+   <dt>
+    simplesamlphp-module-consentsimpleadmin
+   </dt>
+   <dd>
+    A SimpleSAMLphp module implementing a very simple user interface for managing consent.
+   </dd>
+  </dl>
+  <ul>
+   <li>
+    <a href="https://github.com/simplesamlphp/simplesamlphp-module-consentsimpleadmin">
+     Repository
+    </a>
+   </li>
+  </ul>
+ </li>
+ <li>
+  <dl>
+   <dt>
+    simplesamlphp-module-discopower
+   </dt>
+   <dd>
+    Fancy tabbed discovery service with filtering capabilities where SPs can have different sets of metadata listed
+   </dd>
+  </dl>
+  <ul>
+   <li>
+    <a href="https://github.com/simplesamlphp/simplesamlphp-module-discopower">
+     Repository
+    </a>
+   </li>
+  </ul>
+ </li>
+ <li>
+  <dl>
+   <dt>
+    simplesamlphp-module-entitycategories
+   </dt>
+   <dd>
+    A SimpleSAMLphp module to create attribute release policies based on entity categories.
+   </dd>
+  </dl>
+  <ul>
+   <li>
+    <a href="https://github.com/simplesamlphp/simplesamlphp-module-entitycategories">
+     Repository
+    </a>
+   </li>
+  </ul>
+ </li>
+ <li>
+  <dl>
+   <dt>
+    simplesamlphp-module-exampleattributeserver
+   </dt>
+   <dd>
+    An example for SAML attributes queries
+   </dd>
+  </dl>
+  <ul>
+   <li>
+    <a href="https://github.com/simplesamlphp/simplesamlphp-module-exampleattributeserver">
+     Repository
+    </a>
+   </li>
+  </ul>
+ </li>
+ <li>
+  <dl>
+   <dt>
+    simplesamlphp-module-examplecomposer
+   </dt>
+   <dd>
+    An example SimpleSAMLphp module installable through Composer.
+   </dd>
+  </dl>
+  <ul>
+   <li>
+    <a href="https://github.com/simplesamlphp/simplesamlphp-module-examplecomposer">
+     Repository
+    </a>
+   </li>
+  </ul>
+ </li>
+ <li>
+  <dl>
+   <dt>
+    simplesamlphp-module-expirycheck
+   </dt>
+   <dd>
+    The expirycheck module validates user's expiry date
+   </dd>
+  </dl>
+  <ul>
+   <li>
+    <a href="https://github.com/simplesamlphp/simplesamlphp-module-expirycheck">
+     Repository
+    </a>
+   </li>
+  </ul>
+ </li>
+ <li>
+  <dl>
+   <dt>
+    simplesamlphp-module-fticks
+   </dt>
+   <dd>
+    Log statistics in the F-ticks federation log format
+   </dd>
+  </dl>
+  <ul>
+   <li>
+    <a href="https://github.com/simplesamlphp/simplesamlphp-module-fticks">
+     Repository
+    </a>
+   </li>
+  </ul>
+ </li>
+ <li>
+  <dl>
+   <dt>
+    simplesamlphp-module-ldap
+   </dt>
+   <dd>
+    Module that provides authentication against LDAP stores
+   </dd>
+  </dl>
+  <ul>
+   <li>
+    <a href="https://github.com/simplesamlphp/simplesamlphp-module-ldap">
+     Repository
+    </a>
+   </li>
+  </ul>
+ </li>
+ <li>
+  <dl>
+   <dt>
+    simplesamlphp-module-logpeek
+   </dt>
+   <dd>
+    A SimpleSAMLphp module to provide a web API to access the log files.
+   </dd>
+  </dl>
+  <ul>
+   <li>
+    <a href="https://github.com/simplesamlphp/simplesamlphp-module-logpeek">
+     Repository
+    </a>
+   </li>
+  </ul>
+ </li>
+ <li>
+  <dl>
+   <dt>
+    simplesamlphp-module-memcachemonitor
+   </dt>
+   <dd>
+    Module that can display usage stats of memcache(d) backends
+   </dd>
+  </dl>
+  <ul>
+   <li>
+    <a href="https://github.com/simplesamlphp/simplesamlphp-module-memcachemonitor">
+     Repository
+    </a>
+   </li>
+  </ul>
+ </li>
+ <li>
+  <dl>
+   <dt>
+    simplesamlphp-module-memcookie
+   </dt>
+   <dd>
+    A SimpleSAMLphp module that supports Auth MemCookie authentication for applications not written in PHP.
+   </dd>
+  </dl>
+  <ul>
+   <li>
+    <a href="https://github.com/simplesamlphp/simplesamlphp-module-memcookie">
+     Repository
+    </a>
+   </li>
+  </ul>
+ </li>
+ <li>
+  <dl>
+   <dt>
+    simplesamlphp-module-metaedit
+   </dt>
+   <dd>
+    A SimpleSAMLphp module for metadata editing and registration.
+   </dd>
+  </dl>
+  <ul>
+   <li>
+    <a href="https://github.com/simplesamlphp/simplesamlphp-module-metaedit">
+     Repository
+    </a>
+   </li>
+  </ul>
+ </li>
+ <li>
+  <dl>
+   <dt>
+    simplesamlphp-module-metarefresh
+   </dt>
+   <dd>
+    The metarefresh module will download and parse metadata documents and store them locally
+   </dd>
+  </dl>
+  <ul>
+   <li>
+    <a href="https://github.com/simplesamlphp/simplesamlphp-module-metarefresh">
+     Repository
+    </a>
+   </li>
+  </ul>
+ </li>
+ <li>
+  <dl>
+   <dt>
+    simplesamlphp-module-negotiate
+   </dt>
+   <dd>
+    Negotiate module
+   </dd>
+  </dl>
+  <ul>
+   <li>
+    <a href="https://github.com/simplesamlphp/simplesamlphp-module-negotiate">
+     Repository
+    </a>
+   </li>
+  </ul>
+ </li>
+ <li>
+  <dl>
+   <dt>
+    simplesamlphp-module-negotiateext
+   </dt>
+   <dd>
+    Adds support for Kerberos SPNEGO or other GSSAPI by leveraging Apache modules
+   </dd>
+  </dl>
+  <ul>
+   <li>
+    <a href="https://github.com/simplesamlphp/simplesamlphp-module-negotiateext">
+     Repository
+    </a>
+   </li>
+  </ul>
+ </li>
+ <li>
+  <dl>
+   <dt>
+    simplesamlphp-module-oidc
+   </dt>
+   <dd>
+    A SimpleSAMLphp module adding support for the OpenID Connect protocol
+   </dd>
+  </dl>
+  <ul>
+   <li>
+    <a href="https://github.com/simplesamlphp/simplesamlphp-module-oidc">
+     Repository
+    </a>
+   </li>
+  </ul>
+ </li>
+ <li>
+  <dl>
+   <dt>
+    simplesamlphp-module-preprodwarning
+   </dt>
+   <dd>
+    None
+   </dd>
+  </dl>
+  <ul>
+   <li>
+    <a href="https://github.com/simplesamlphp/simplesamlphp-module-preprodwarning">
+     Repository
+    </a>
+   </li>
+  </ul>
+ </li>
+ <li>
+  <dl>
+   <dt>
+    simplesamlphp-module-radius
+   </dt>
+   <dd>
+    Authenticate a user against a RADIUS server
+   </dd>
+  </dl>
+  <ul>
+   <li>
+    <a href="https://github.com/simplesamlphp/simplesamlphp-module-radius">
+     Repository
+    </a>
+   </li>
+  </ul>
+ </li>
+ <li>
+  <dl>
+   <dt>
+    simplesamlphp-module-saml2debug
+   </dt>
+   <dd>
+    A module to debug encoding and decoding of SAML message for both the HTTP-redirect and HTTP-POST bindings.
+   </dd>
+  </dl>
+  <ul>
+   <li>
+    <a href="https://github.com/simplesamlphp/simplesamlphp-module-saml2debug">
+     Repository
+    </a>
+   </li>
+  </ul>
+ </li>
+ <li>
+  <dl>
+   <dt>
+    simplesamlphp-module-sanitycheck
+   </dt>
+   <dd>
+    Perform sanity checks on configuration
+   </dd>
+  </dl>
+  <ul>
+   <li>
+    <a href="https://github.com/simplesamlphp/simplesamlphp-module-sanitycheck">
+     Repository
+    </a>
+   </li>
+  </ul>
+ </li>
+ <li>
+  <dl>
+   <dt>
+    simplesamlphp-module-smartattributes
+   </dt>
+   <dd>
+    The SmartAttributes module provides additional authentication processing filters to manipulate attributes
+   </dd>
+  </dl>
+  <ul>
+   <li>
+    <a href="https://github.com/simplesamlphp/simplesamlphp-module-smartattributes">
+     Repository
+    </a>
+   </li>
+  </ul>
+ </li>
+ <li>
+  <dl>
+   <dt>
+    simplesamlphp-module-sqlauth
+   </dt>
+   <dd>
+    This is a authentication module for authenticating a user against a SQL database
+   </dd>
+  </dl>
+  <ul>
+   <li>
+    <a href="https://github.com/simplesamlphp/simplesamlphp-module-sqlauth">
+     Repository
+    </a>
+   </li>
+  </ul>
+ </li>
+ <li>
+  <dl>
+   <dt>
+    simplesamlphp-module-statistics
+   </dt>
+   <dd>
+    The SimpleSAMLphp statistics module
+   </dd>
+  </dl>
+  <ul>
+   <li>
+    <a href="https://github.com/simplesamlphp/simplesamlphp-module-statistics">
+     Repository
+    </a>
+   </li>
+  </ul>
+ </li>
+ <li>
+  <dl>
+   <dt>
+    simplesamlphp-module-webauthn
+   </dt>
+   <dd>
+    A module implementing FIDO2 / WebAuthn as a second authentication factor
+   </dd>
+  </dl>
+  <ul>
+   <li>
+    <a href="https://github.com/simplesamlphp/simplesamlphp-module-webauthn">
+     Repository
+    </a>
+   </li>
+  </ul>
+ </li>
+ <li>
+  <dl>
+   <dt>
+    simplesamlphp-module-yubikey
+   </dt>
+   <dd>
+    None
+   </dd>
+  </dl>
+  <ul>
+   <li>
+    <a href="https://github.com/simplesamlphp/simplesamlphp-module-yubikey">
      Repository
     </a>
    </li>
