--- a/devel/index.html
+++ b/devel/index.html
@@ -192,111 +192,68 @@
   </ul>
  </li>
  <li>
-  <a href="./metarefresh/simplesamlphp-automated_metadata.html">
-   Automated Metadata Management
-  </a>
- </li>
- <li>
-  <a href="simplesamlphp-maintenance.html">
-   Maintenance and configuration
-  </a>
-  - covers session handling, php configuration etc.
- </li>
- <li>
-  <a href="simplesamlphp-authproc.html">
-   Authentication Processing Filters
-  </a>
-  - attribute filtering, attribute mapping, consent, group generation etc.
- </li>
- <li>
-  <a href="simplesamlphp-advancedfeatures.html">
-   Advanced features
-  </a>
-  - covers bridging protocols, attribute filtering, etc.
- </li>
- <li>
-  <a href="simplesamlphp-nostate.html">
-   State Information Lost
-  </a>
-  - more about this common error message
- </li>
- <li>
-  <a href="simplesamlphp-translation.html">
-   SimpleSAMLphp Dictionaries and Translation
-  </a>
- </li>
- <li>
-  <a href="simplesamlphp-theming.html">
-   Theming SimpleSAMLphp
-  </a>
- </li>
- <li>
-  <a href="simplesamlphp-modules.html">
-   SimpleSAMLphp Modules
-  </a>
-  - how to create own customized modules
- </li>
- <li>
-  <a href="./saml/keyrollover.html">
-   Key rollover
-  </a>
- </li>
- <li>
-  <a href="./simplesamlphp-authsource.html">
-   Creating authentication sources
-  </a>
+  Further topics
   <ul>
    <li>
-    <a href="./simplesamlphp-customauth.html">
-     Implementing custom username/password authentication
+    <a href="simplesamlphp-maintenance.html">
+     Maintenance and configuration
     </a>
+    - covers session handling, php configuration etc.
+   </li>
+   <li>
+    <a href="/docs/contrib_modules/metarefresh/simplesamlphp-automated_metadata.html">
+     Automated Metadata Management
+    </a>
+   </li>
+   <li>
+    <a href="./saml/keyrollover.html">
+     Key rollover
+    </a>
+   </li>
+   <li>
+    <a href="simplesamlphp-authproc.html">
+     Authentication Processing Filters
+    </a>
+    - attribute filtering, attribute mapping, consent, group generation etc.
+   </li>
+   <li>
+    <a href="simplesamlphp-nostate.html">
+     State Information Lost
+    </a>
+    - more about this common error message
+   </li>
+   <li>
+    <a href="simplesamlphp-advancedfeatures.html">
+     Advanced features
+    </a>
+    - covers bridging protocols, attribute filtering, etc.
    </li>
   </ul>
  </li>
  <li>
-  <a href="./riak/simplesamlphp-riak.html">
-   Storing sessions in Riak
-  </a>
- </li>
-</ul>
-<p>
- Documentation on specific SimpleSAMLphp modules:
-</p>
-<ul>
- <li>
-  <a href="./consent/consent.html">
-   Consent module
-  </a>
- </li>
- <li>
-  <a href="./consentAdmin/consentAdmin.html">
-   Installing and configuring the consentAdmin module
-  </a>
- </li>
- <li>
-  <a href="./authorize/authorize.html">
-   Authorization
-  </a>
- </li>
- <li>
-  <a href="https://github.com/simplesamlphp/simplesamlphp-module-autotest/blob/v1.0/README.md">
-   autotest Module
-  </a>
- </li>
- <li>
-  <a href="./statistics/statistics.html">
-   Statistics
-  </a>
- </li>
-</ul>
-<p>
- Documentation for SimpleSAMLphp developers:
-</p>
-<ul>
- <li>
-  <a href="simplesamlphp-errorhandling.html">
-   Error handling in SimpleSAMLphp
-  </a>
+  SimpleSAMLphp Modules
+  <ul>
+   <li>
+    <a href="/docs/contributed_modules.html">
+     Documentation for specific modules
+    </a>
+   </li>
+   <li>
+    <a href="simplesamlphp-theming.html">
+     Theming SimpleSAMLphp
+    </a>
+   </li>
+   <li>
+    <a href="./simplesamlphp-authsource.html">
+     Creating authentication sources
+    </a>
+   </li>
+   <li>
+    <a href="simplesamlphp-modules.html">
+     Create your own customized modules
+    </a>
+   </li>
+  </ul>
  </li>
 </ul></main></body>
 </html>
