deploy: f5f91fab59fb99323f411607b69741cd291b47bc

--- a/contributed_modules.html
+++ b/contributed_modules.html
@@ -106,6 +106,11 @@
      Repository
     </a>
    </li>
+   <li>
+    <a href="contrib_modules/adfs/adfs.html">
+     adfs.html
+    </a>
+   </li>
   </ul>
  </li>
  <li>
@@ -140,6 +145,11 @@
      Repository
     </a>
    </li>
+   <li>
+    <a href="contrib_modules/authcrypt/authcrypt.html">
+     authcrypt.html
+    </a>
+   </li>
   </ul>
  </li>
  <li>
@@ -155,6 +165,11 @@
    <li>
     <a href="https://github.com/simplesamlphp/simplesamlphp-module-authorize">
      Repository
+    </a>
+   </li>
+   <li>
+    <a href="contrib_modules/authorize/authorize.html">
+     authorize.html
     </a>
    </li>
   </ul>
@@ -174,6 +189,11 @@
      Repository
     </a>
    </li>
+   <li>
+    <a href="contrib_modules/authtwitter/oauthtwitter.html">
+     oauthtwitter.html
+    </a>
+   </li>
   </ul>
  </li>
  <li>
@@ -189,6 +209,11 @@
    <li>
     <a href="https://github.com/simplesamlphp/simplesamlphp-module-authX509">
      Repository
+    </a>
+   </li>
+   <li>
+    <a href="contrib_modules/authX509/authX509.html">
+     authX509.html
     </a>
    </li>
   </ul>
@@ -242,6 +267,11 @@
      Repository
     </a>
    </li>
+   <li>
+    <a href="contrib_modules/cas/cas.html">
+     cas.html
+    </a>
+   </li>
   </ul>
  </li>
  <li>
@@ -257,6 +287,11 @@
    <li>
     <a href="https://github.com/simplesamlphp/simplesamlphp-module-casserver">
      Repository
+    </a>
+   </li>
+   <li>
+    <a href="contrib_modules/casserver/ChangeLog.html">
+     ChangeLog.html
     </a>
    </li>
   </ul>
@@ -293,6 +328,11 @@
      Repository
     </a>
    </li>
+   <li>
+    <a href="contrib_modules/consent/consent.html">
+     consent.html
+    </a>
+   </li>
   </ul>
  </li>
  <li>
@@ -308,6 +348,11 @@
    <li>
     <a href="https://github.com/simplesamlphp/simplesamlphp-module-consentadmin">
      Repository
+    </a>
+   </li>
+   <li>
+    <a href="contrib_modules/consentadmin/consentAdmin.html">
+     consentAdmin.html
     </a>
    </li>
   </ul>
@@ -342,6 +387,11 @@
    <li>
     <a href="https://github.com/simplesamlphp/simplesamlphp-module-discopower">
      Repository
+    </a>
+   </li>
+   <li>
+    <a href="contrib_modules/discopower/discopower.html">
+     discopower.html
     </a>
    </li>
   </ul>
@@ -412,6 +462,11 @@
      Repository
     </a>
    </li>
+   <li>
+    <a href="contrib_modules/expirycheck/expirycheck.html">
+     expirycheck.html
+    </a>
+   </li>
   </ul>
  </li>
  <li>
@@ -429,6 +484,11 @@
      Repository
     </a>
    </li>
+   <li>
+    <a href="contrib_modules/fticks/authproc_fticks.html">
+     authproc_fticks.html
+    </a>
+   </li>
   </ul>
  </li>
  <li>
@@ -444,6 +504,11 @@
    <li>
     <a href="https://github.com/simplesamlphp/simplesamlphp-module-ldap">
      Repository
+    </a>
+   </li>
+   <li>
+    <a href="contrib_modules/ldap/ldap.html">
+     ldap.html
     </a>
    </li>
   </ul>
@@ -531,6 +596,11 @@
      Repository
     </a>
    </li>
+   <li>
+    <a href="contrib_modules/metarefresh/simplesamlphp-automated_metadata.html">
+     simplesamlphp-automated_metadata.html
+    </a>
+   </li>
   </ul>
  </li>
  <li>
@@ -548,6 +618,11 @@
      Repository
     </a>
    </li>
+   <li>
+    <a href="contrib_modules/negotiate/negotiate.html">
+     negotiate.html
+    </a>
+   </li>
   </ul>
  </li>
  <li>
@@ -563,6 +638,11 @@
    <li>
     <a href="https://github.com/simplesamlphp/simplesamlphp-module-negotiateext">
      Repository
+    </a>
+   </li>
+   <li>
+    <a href="contrib_modules/negotiateext/negotiateext.html">
+     negotiateext.html
     </a>
    </li>
   </ul>
@@ -616,6 +696,11 @@
      Repository
     </a>
    </li>
+   <li>
+    <a href="contrib_modules/radius/radius.html">
+     radius.html
+    </a>
+   </li>
   </ul>
  </li>
  <li>
@@ -667,6 +752,11 @@
      Repository
     </a>
    </li>
+   <li>
+    <a href="contrib_modules/smartattributes/smartattributes.html">
+     smartattributes.html
+    </a>
+   </li>
   </ul>
  </li>
  <li>
@@ -682,6 +772,11 @@
    <li>
     <a href="https://github.com/simplesamlphp/simplesamlphp-module-sqlauth">
      Repository
+    </a>
+   </li>
+   <li>
+    <a href="contrib_modules/sqlauth/sql.html">
+     sql.html
     </a>
    </li>
   </ul>
@@ -701,6 +796,11 @@
      Repository
     </a>
    </li>
+   <li>
+    <a href="contrib_modules/statistics/statistics.html">
+     statistics.html
+    </a>
+   </li>
   </ul>
  </li>
  <li>
@@ -716,6 +816,11 @@
    <li>
     <a href="https://github.com/simplesamlphp/simplesamlphp-module-webauthn">
      Repository
+    </a>
+   </li>
+   <li>
+    <a href="contrib_modules/webauthn/tested_tokens.html">
+     tested_tokens.html
     </a>
    </li>
   </ul>
