deploy: 104bcca4e624fcc34f7d6d974718aa386d3c6a82

--- a/contributed_modules.html
+++ b/contributed_modules.html
@@ -107,6 +107,7 @@
     </a>
    </li>
    <li>
+    Documentation:
     <a href="contrib_modules/adfs/adfs.html">
      adfs.html
     </a>
@@ -146,6 +147,7 @@
     </a>
    </li>
    <li>
+    Documentation:
     <a href="contrib_modules/authcrypt/authcrypt.html">
      authcrypt.html
     </a>
@@ -168,6 +170,7 @@
     </a>
    </li>
    <li>
+    Documentation:
     <a href="contrib_modules/authorize/authorize.html">
      authorize.html
     </a>
@@ -190,6 +193,7 @@
     </a>
    </li>
    <li>
+    Documentation:
     <a href="contrib_modules/authtwitter/oauthtwitter.html">
      oauthtwitter.html
     </a>
@@ -212,6 +216,7 @@
     </a>
    </li>
    <li>
+    Documentation:
     <a href="contrib_modules/authX509/authX509.html">
      authX509.html
     </a>
@@ -268,6 +273,7 @@
     </a>
    </li>
    <li>
+    Documentation:
     <a href="contrib_modules/cas/cas.html">
      cas.html
     </a>
@@ -290,6 +296,7 @@
     </a>
    </li>
    <li>
+    Documentation:
     <a href="contrib_modules/casserver/ChangeLog.html">
      ChangeLog.html
     </a>
@@ -329,6 +336,7 @@
     </a>
    </li>
    <li>
+    Documentation:
     <a href="contrib_modules/consent/consent.html">
      consent.html
     </a>
@@ -351,6 +359,7 @@
     </a>
    </li>
    <li>
+    Documentation:
     <a href="contrib_modules/consentadmin/consentAdmin.html">
      consentAdmin.html
     </a>
@@ -390,6 +399,7 @@
     </a>
    </li>
    <li>
+    Documentation:
     <a href="contrib_modules/discopower/discopower.html">
      discopower.html
     </a>
@@ -463,6 +473,7 @@
     </a>
    </li>
    <li>
+    Documentation:
     <a href="contrib_modules/expirycheck/expirycheck.html">
      expirycheck.html
     </a>
@@ -485,6 +496,7 @@
     </a>
    </li>
    <li>
+    Documentation:
     <a href="contrib_modules/fticks/authproc_fticks.html">
      authproc_fticks.html
     </a>
@@ -507,6 +519,7 @@
     </a>
    </li>
    <li>
+    Documentation:
     <a href="contrib_modules/ldap/ldap.html">
      ldap.html
     </a>
@@ -597,6 +610,7 @@
     </a>
    </li>
    <li>
+    Documentation:
     <a href="contrib_modules/metarefresh/simplesamlphp-automated_metadata.html">
      simplesamlphp-automated_metadata.html
     </a>
@@ -619,6 +633,7 @@
     </a>
    </li>
    <li>
+    Documentation:
     <a href="contrib_modules/negotiate/negotiate.html">
      negotiate.html
     </a>
@@ -641,6 +656,7 @@
     </a>
    </li>
    <li>
+    Documentation:
     <a href="contrib_modules/negotiateext/negotiateext.html">
      negotiateext.html
     </a>
@@ -697,6 +713,7 @@
     </a>
    </li>
    <li>
+    Documentation:
     <a href="contrib_modules/radius/radius.html">
      radius.html
     </a>
@@ -753,6 +770,7 @@
     </a>
    </li>
    <li>
+    Documentation:
     <a href="contrib_modules/smartattributes/smartattributes.html">
      smartattributes.html
     </a>
@@ -775,6 +793,7 @@
     </a>
    </li>
    <li>
+    Documentation:
     <a href="contrib_modules/sqlauth/sql.html">
      sql.html
     </a>
@@ -797,6 +816,7 @@
     </a>
    </li>
    <li>
+    Documentation:
     <a href="contrib_modules/statistics/statistics.html">
      statistics.html
     </a>
@@ -819,6 +839,7 @@
     </a>
    </li>
    <li>
+    Documentation:
     <a href="contrib_modules/webauthn/tested_tokens.html">
      tested_tokens.html
     </a>
