--- a/1.19/simplesamlphp-sp.html
+++ b/1.19/simplesamlphp-sp.html
@@ -90,12 +90,59 @@
 </header><main><h1 id="simplesamlphp-service-provider-quickstart">
  SimpleSAMLphp Service Provider QuickStart
 </h1>
-<!-- 
-  This file is written in Markdown syntax. 
-  For more information about how to use the Markdown syntax, read here:
-  http://daringfireball.net/projects/markdown/syntax
--->
-<!-- {{TOC}} -->
+<div class="toc">
+ <ul>
+  <li>
+   <a href="#simplesamlphp-service-provider-quickstart">
+    SimpleSAMLphp Service Provider QuickStart
+   </a>
+   <ul>
+    <li>
+     <a href="#configuring-the-sp">
+      Configuring the SP
+     </a>
+     <ul>
+      <li>
+       <a href="#enabling-a-certificate-for-your-service-provider">
+        Enabling a certificate for your Service Provider
+       </a>
+      </li>
+     </ul>
+    </li>
+    <li>
+     <a href="#adding-idps-to-the-sp">
+      Adding IdPs to the SP
+     </a>
+    </li>
+    <li>
+     <a href="#setting-the-default-idp">
+      Setting the default IdP
+     </a>
+    </li>
+    <li>
+     <a href="#exchange-metadata-with-the-idp">
+      Exchange metadata with the IdP
+     </a>
+    </li>
+    <li>
+     <a href="#test-the-sp">
+      Test the SP
+     </a>
+    </li>
+    <li>
+     <a href="#integrating-authentication-with-your-own-application">
+      Integrating authentication with your own application
+     </a>
+    </li>
+    <li>
+     <a href="#support">
+      Support
+     </a>
+    </li>
+   </ul>
+  </li>
+ </ul>
+</div>
 <p>
  This guide will describe how to configure SimpleSAMLphp as a service provider (SP). You should previously have installed SimpleSAMLphp as described in
  <a href="simplesamlphp-install.html">
@@ -313,7 +360,7 @@ directory.
  </em>
  , and register that with the federation administration.
 You will probably be required too to consume the federation metadata periodically. Read more about
- <a href="https://github.com/simplesamlphp/simplesamlphp-module-metarefresh/blob/master/docs/simplesamlphp-automated_metadata.md">
+ <a href="/docs/contrib_modules/metarefresh/simplesamlphp-automated_metadata.html">
   automated metadata management
  </a>
  to learn more about that.
