--- a/devel/simplesamlphp-advancedfeatures.html
+++ b/devel/simplesamlphp-advancedfeatures.html
@@ -90,11 +90,6 @@
 </header><main><h1 id="simplesamlphp-advanced-features">
  SimpleSAMLphp Advanced Features
 </h1>
-<!-- 
-  This file is written in Markdown syntax. 
-  For more information about how to use the Markdown syntax, read here:
-  http://daringfireball.net/projects/markdown/syntax
--->
 <div class="toc">
  <ul>
   <li>
@@ -233,7 +228,7 @@ The SAML 2.0 SP talks to the SAML 2.0 IdP, which hands the request over to the S
  </code>
  module is the preferred method for doing this.
 Please see the
- <a href="./metarefresh/simplesamlphp-automated_metadata.html">
+ <a href="/docs/contrib_modules/metarefresh/simplesamlphp-automated_metadata.html">
   metarefresh documentation
  </a>
  .
