--- a/devel/simplesamlphp-idp-more.html
+++ b/devel/simplesamlphp-idp-more.html
@@ -141,7 +141,7 @@
 </h2>
 <p>
  The attribute release consent is documented in a
- <a href="./consent/consent.html">
+ <a href="/docs/contrib_modules/consent/consent.html">
   separate document
  </a>
  .
