--- a/devel/simplesamlphp-idp.html
+++ b/devel/simplesamlphp-idp.html
@@ -90,11 +90,6 @@
 </header><main><h1 id="simplesamlphp-identity-provider-quickstart">
  SimpleSAMLphp Identity Provider QuickStart
 </h1>
-<!-- 
-  This file is written in Markdown syntax. 
-  For more information about how to use the Markdown syntax, read here:
-  http://daringfireball.net/projects/markdown/syntax
--->
 <div class="toc">
  <ul>
   <li>
@@ -215,7 +210,7 @@
 </p>
 <dl>
  <dt>
-  <a href="./authcrypt/authcrypt.html">
+  <a href="/docs/contrib_modules/authcrypt/authcrypt.html">
    <code>
     authcrypt:Hash
    </code>
@@ -225,7 +220,7 @@
   Username &amp; password authentication with hashed passwords.
  </dd>
  <dt>
-  <a href="./authcrypt/authcrypt.html">
+  <a href="/docs/contrib_modules/authcrypt/authcrypt.html">
    <code>
     authcrypt:Htpasswd
    </code>
@@ -235,7 +230,7 @@
   Username &amp; password authentication against .htpasswd file.
  </dd>
  <dt>
-  <a href="./authX509/authX509.html">
+  <a href="/docs/contrib_modules/authX509/authX509.html">
    <code>
     authX509:authX509userCert
    </code>
@@ -261,7 +256,7 @@
   Automatically log in as a user with a set of attributes.
  </dd>
  <dt>
-  <a href="./ldap/ldap.html">
+  <a href="/docs/contrib_modules/ldap/ldap.html">
    <code>
     ldap:LDAP
    </code>
@@ -271,7 +266,7 @@
   Authenticates an user to a LDAP server.
  </dd>
  <dt>
-  <a href="./ldap/ldap.html">
+  <a href="/docs/contrib_modules/ldap/ldap.html">
    <code>
     ldap:LDAPMulti
    </code>
@@ -282,7 +277,7 @@
   The user can choose the LDAP server from a dropdown list.
  </dd>
  <dt>
-  <a href="./sqlauth/sql.html">
+  <a href="/docs/contrib_modules/sqlauth/sql.html">
    <code>
     sqlauth:SQL
    </code>
@@ -292,7 +287,7 @@
   Authenticate an user against a database.
  </dd>
  <dt>
-  <a href="./radius/radius.html">
+  <a href="/docs/contrib_modules/radius/radius.html">
    <code>
     radius:Radius
    </code>
@@ -328,23 +323,13 @@
  </dt>
  <dd>
   Authenticate with
-  <a href="http://www.yubico.com/products/yubikey/">
-   an YubiKey
+  <a href="https://www.yubico.com/products/yubikey/">
+   a YubiKey
   </a>
   .
  </dd>
  <dt>
-  <a href="./authfacebook/authfacebook.html">
-   <code>
-    authfacebook:Facebook
-   </code>
-  </a>
- </dt>
- <dd>
-  Authenticate with a Facebook ID.
- </dd>
- <dt>
-  <a href="./authtwitter/oauthtwitter.html">
+  <a href="/docs/contrib_modules/authtwitter/oauthtwitter.html">
    <code>
     authtwitter:Twitter
    </code>
