--- a/devel/simplesamlphp-install.html
+++ b/devel/simplesamlphp-install.html
@@ -1038,7 +1038,7 @@ in a separate document.
   </ul>
  </li>
  <li>
-  <a href="./metarefresh/simplesamlphp-automated_metadata.html">
+  <a href="/docs/contrib_modules/metarefresh/simplesamlphp-automated_metadata.html">
    Automated Metadata Management
   </a>
  </li>
