--- a/devel/simplesamlphp-sp.html
+++ b/devel/simplesamlphp-sp.html
@@ -403,7 +403,7 @@ provide the
  , and register that with the
 federation administration. You will probably be required too to consume
 the federation metadata periodically. Read more about
- <a href="./metarefresh/simplesamlphp-automated_metadata.html">
+ <a href="/docs/contrib_modules/metarefresh/simplesamlphp-automated_metadata.html">
   automated metadata management
  </a>
  to learn more about that.
