--- a/devel/simplesamlphp-googleapps.html
+++ b/devel/simplesamlphp-googleapps.html
@@ -90,11 +90,6 @@
 </header><main><h1 id="setting-up-a-simplesamlphp-saml-20-idp-to-use-with-google-workspace-g-suite-google-apps-for-education">
  Setting up a SimpleSAMLphp SAML 2.0 IdP to use with Google Workspace (G Suite / Google Apps) for Education
 </h1>
-<!-- 
-  This file is written in Markdown syntax. 
-  For more information about how to use the Markdown syntax, read here:
-  http://daringfireball.net/projects/markdown/syntax
--->
 <div class="toc">
  <ul>
   <li>
@@ -291,7 +286,7 @@ Here is an example of an openssl command to generate a new key and a self signed
   Automatically log in as a user with a set of attributes.
  </dd>
  <dt>
-  <a href="./ldap/ldap.html">
+  <a href="/docs/contrib_modules/ldap/ldap.html">
    <code>
     ldap:LDAP
    </code>
