--- a/stable/simplesamlphp-advancedfeatures.html
+++ b/stable/simplesamlphp-advancedfeatures.html
@@ -90,12 +90,62 @@
 </header><main><h1 id="simplesamlphp-advanced-features">
  SimpleSAMLphp Advanced Features
 </h1>
-<!-- 
-  This file is written in Markdown syntax. 
-  For more information about how to use the Markdown syntax, read here:
-  http://daringfireball.net/projects/markdown/syntax
--->
-<!-- {{TOC}} -->
+<div class="toc">
+ <ul>
+  <li>
+   <a href="#simplesamlphp-advanced-features">
+    SimpleSAMLphp Advanced Features
+   </a>
+   <ul>
+    <li>
+     <a href="#simplesamlphp-documentation">
+      SimpleSAMLphp documentation
+     </a>
+    </li>
+    <li>
+     <a href="#bridging-between-protocols">
+      Bridging between protocols
+     </a>
+    </li>
+    <li>
+     <a href="#attribute-control">
+      Attribute control
+     </a>
+    </li>
+    <li>
+     <a href="#automatic-update-of-saml-20-metadata-xml-from-https">
+      Automatic update of SAML 2.0 Metadata XML from HTTPS
+     </a>
+    </li>
+    <li>
+     <a href="#using-simplesamlphp-on-a-web-server-requiring-the-use-of-a-web-proxy">
+      Using simpleSAMLphp on a web server requiring the use of a web proxy
+     </a>
+    </li>
+    <li>
+     <a href="#auth-memcookie">
+      Auth MemCookie
+     </a>
+    </li>
+    <li>
+     <a href="#metadata-signing">
+      Metadata signing
+     </a>
+    </li>
+    <li>
+     <a href="#session-checking-function">
+      Session checking function
+     </a>
+    </li>
+    <li>
+     <a href="#support">
+      Support
+     </a>
+    </li>
+   </ul>
+  </li>
+ </ul>
+</div>
 <h2 id="simplesamlphp-documentation">
  SimpleSAMLphp documentation
 </h2>
@@ -178,7 +228,7 @@ The SAML 2.0 SP talks to the SAML 2.0 IdP, which hands the request over to the S
  </code>
  module is the preferred method for doing this.
 Please see the
- <a href="https://github.com/simplesamlphp/simplesamlphp-module-metarefresh/blob/master/docs/simplesamlphp-automated_metadata.md">
+ <a href="/docs/contrib_modules/metarefresh/simplesamlphp-automated_metadata.html">
   metarefresh documentation
  </a>
  .
