--- a/stable/simplesamlphp-googleapps.html
+++ b/stable/simplesamlphp-googleapps.html
@@ -90,12 +90,91 @@
 </header><main><h1 id="setting-up-a-simplesamlphp-saml-20-idp-to-use-with-google-workspace-g-suite-google-apps-for-education">
  Setting up a SimpleSAMLphp SAML 2.0 IdP to use with Google Workspace (G Suite / Google Apps) for Education
 </h1>
-<!-- 
-  This file is written in Markdown syntax. 
-  For more information about how to use the Markdown syntax, read here:
-  http://daringfireball.net/projects/markdown/syntax
--->
-<!-- {{TOC}} -->
+<div class="toc">
+ <ul>
+  <li>
+   <a href="#setting-up-a-simplesamlphp-saml-20-idp-to-use-with-google-workspace-g-suite-google-apps-for-education">
+    Setting up a SimpleSAMLphp SAML 2.0 IdP to use with Google Workspace (G Suite / Google Apps) for Education
+   </a>
+   <ul>
+    <li>
+     <a href="#simplesamlphp-news-and-documentation">
+      SimpleSAMLphp news and documentation
+     </a>
+    </li>
+    <li>
+     <a href="#introduction">
+      Introduction
+     </a>
+    </li>
+    <li>
+     <a href="#enabling-the-identity-provider-functionality">
+      Enabling the Identity Provider functionality
+     </a>
+    </li>
+    <li>
+     <a href="#setting-up-a-signing-certificate">
+      Setting up a signing certificate
+     </a>
+    </li>
+    <li>
+     <a href="#authentication-source">
+      Authentication source
+     </a>
+    </li>
+    <li>
+     <a href="#configuring-the-authentication-source">
+      Configuring the authentication source
+     </a>
+    </li>
+    <li>
+     <a href="#configuring-metadata-for-an-saml-20-idp">
+      Configuring metadata for an SAML 2.0 IdP
+     </a>
+     <ul>
+      <li>
+       <a href="#configuring-saml-20-idp-hosted-metadata">
+        Configuring SAML 2.0 IdP Hosted metadata
+       </a>
+      </li>
+      <li>
+       <a href="#configuring-saml-20-sp-remote-metadata">
+        Configuring SAML 2.0 SP Remote metadata
+       </a>
+      </li>
+     </ul>
+    </li>
+    <li>
+     <a href="#configure-google-workspace">
+      Configure Google Workspace
+     </a>
+     <ul>
+      <li>
+       <a href="#add-a-user-in-g-suite-that-is-known-to-the-idp">
+        Add a user in G Suite that is known to the IdP
+       </a>
+      </li>
+     </ul>
+    </li>
+    <li>
+     <a href="#test-to-login-to-g-suite-for-education">
+      Test to login to G Suite for education
+     </a>
+    </li>
+    <li>
+     <a href="#security-considerations">
+      Security Considerations
+     </a>
+    </li>
+    <li>
+     <a href="#support">
+      Support
+     </a>
+    </li>
+   </ul>
+  </li>
+ </ul>
+</div>
 <h2 id="simplesamlphp-news-and-documentation">
  SimpleSAMLphp news and documentation
 </h2>
@@ -208,7 +287,7 @@ Here is an example of an openssl command to generate a new key and a self signed
   Automatically log in as a user with a set of attributes.
  </dd>
  <dt>
-  <a href="./ldap/ldap.html">
+  <a href="/docs/contrib_modules/ldap/ldap.html">
    <code>
     ldap:LDAP
    </code>
