--- a/stable/simplesamlphp-idp-more.html
+++ b/stable/simplesamlphp-idp-more.html
@@ -90,12 +90,49 @@
 </header><main><h1 id="simplesamlphp-identity-provider-advanced-topics">
  SimpleSAMLphp Identity Provider Advanced Topics
 </h1>
-<!-- 
-  This file is written in Markdown syntax. 
-  For more information about how to use the Markdown syntax, read here:
-  http://daringfireball.net/projects/markdown/syntax
--->
-<!-- {{TOC}} -->
+<div class="toc">
+ <ul>
+  <li>
+   <a href="#simplesamlphp-identity-provider-advanced-topics">
+    SimpleSAMLphp Identity Provider Advanced Topics
+   </a>
+   <ul>
+    <li>
+     <a href="#ajax-iframe-single-log-out">
+      AJAX iFrame Single Log-Out
+     </a>
+    </li>
+    <li>
+     <a href="#attribute-release-consent">
+      Attribute Release Consent
+     </a>
+    </li>
+    <li>
+     <a href="#support-for-bookmarking-the-login-page">
+      Support for bookmarking the login page
+     </a>
+    </li>
+    <li>
+     <a href="#idp-first-flow">
+      IdP-first flow
+     </a>
+     <ul>
+      <li>
+       <a href="#idp-first-with-saml-11">
+        IdP first with SAML 1.1
+       </a>
+      </li>
+     </ul>
+    </li>
+    <li>
+     <a href="#idp-initiated-logout">
+      IdP-initiated logout
+     </a>
+    </li>
+   </ul>
+  </li>
+ </ul>
+</div>
 <h2 id="ajax-iframe-single-log-out">
  AJAX iFrame Single Log-Out
 </h2>
@@ -111,7 +148,7 @@
 </h2>
 <p>
  The attribute release consent is documented in a
- <a href="./consent/consent.html">
+ <a href="/docs/contrib_modules/consent/consent.html">
   separate document
  </a>
  .
