--- a/stable/simplesamlphp-idp.html
+++ b/stable/simplesamlphp-idp.html
@@ -90,12 +90,86 @@
 </header><main><h1 id="simplesamlphp-identity-provider-quickstart">
  SimpleSAMLphp Identity Provider QuickStart
 </h1>
-<!-- 
-  This file is written in Markdown syntax. 
-  For more information about how to use the Markdown syntax, read here:
-  http://daringfireball.net/projects/markdown/syntax
--->
-<!-- {{TOC}} -->
+<div class="toc">
+ <ul>
+  <li>
+   <a href="#simplesamlphp-identity-provider-quickstart">
+    SimpleSAMLphp Identity Provider QuickStart
+   </a>
+   <ul>
+    <li>
+     <a href="#enabling-the-identity-provider-functionality">
+      Enabling the Identity Provider functionality
+     </a>
+    </li>
+    <li>
+     <a href="#authentication-module">
+      Authentication module
+     </a>
+    </li>
+    <li>
+     <a href="#configuring-the-authentication-module">
+      Configuring the authentication module
+     </a>
+    </li>
+    <li>
+     <a href="#creating-a-self-signed-certificate">
+      Creating a self signed certificate
+     </a>
+     <ul>
+      <li>
+       <a href="#note">
+        Note
+       </a>
+      </li>
+     </ul>
+    </li>
+    <li>
+     <a href="#configuring-the-idp">
+      Configuring the IdP
+     </a>
+    </li>
+    <li>
+     <a href="#using-the-uri-nameformat-on-attributes">
+      Using the uri NameFormat on attributes
+     </a>
+    </li>
+    <li>
+     <a href="#adding-sps-to-the-idp">
+      Adding SPs to the IdP
+     </a>
+    </li>
+    <li>
+     <a href="#adding-this-idp-to-other-sps">
+      Adding this IdP to other SPs
+     </a>
+    </li>
+    <li>
+     <a href="#testing-the-idp">
+      Testing the IdP
+     </a>
+     <ul>
+      <li>
+       <a href="#note_1">
+        Note
+       </a>
+      </li>
+     </ul>
+    </li>
+    <li>
+     <a href="#support">
+      Support
+     </a>
+    </li>
+    <li>
+     <a href="#a-idp-first-setup">
+      A. IdP-first setup
+     </a>
+    </li>
+   </ul>
+  </li>
+ </ul>
+</div>
 <p>
  This guide will describe how to configure SimpleSAMLphp as an identity provider (IdP). You should previously have installed SimpleSAMLphp as described in
  <a href="simplesamlphp-install.html">
@@ -136,7 +210,7 @@
 </p>
 <dl>
  <dt>
-  <a href="./authcrypt/authcrypt.html">
+  <a href="/docs/contrib_modules/authcrypt/authcrypt.html">
    <code>
     authcrypt:Hash
    </code>
@@ -146,7 +220,7 @@
   Username &amp; password authentication with hashed passwords.
  </dd>
  <dt>
-  <a href="./authcrypt/authcrypt.html">
+  <a href="/docs/contrib_modules/authcrypt/authcrypt.html">
    <code>
     authcrypt:Htpasswd
    </code>
@@ -156,7 +230,7 @@
   Username &amp; password authentication against .htpasswd file.
  </dd>
  <dt>
-  <a href="./authX509/authX509.html">
+  <a href="/docs/contrib_modules/authX509/authX509.html">
    <code>
     authX509:authX509userCert
    </code>
@@ -182,7 +256,7 @@
   Automatically log in as a user with a set of attributes.
  </dd>
  <dt>
-  <a href="./ldap/ldap.html">
+  <a href="/docs/contrib_modules/ldap/ldap.html">
    <code>
     ldap:LDAP
    </code>
@@ -192,7 +266,7 @@
   Authenticates an user to a LDAP server.
  </dd>
  <dt>
-  <a href="./ldap/ldap.html">
+  <a href="/docs/contrib_modules/ldap/ldap.html">
    <code>
     ldap:LDAPMulti
    </code>
@@ -203,7 +277,7 @@
   The user can choose the LDAP server from a dropdown list.
  </dd>
  <dt>
-  <a href="./sqlauth/sql.html">
+  <a href="/docs/contrib_modules/sqlauth/sql.html">
    <code>
     sqlauth:SQL
    </code>
@@ -213,7 +287,7 @@
   Authenticate an user against a database.
  </dd>
  <dt>
-  <a href="./radius/radius.html">
+  <a href="/docs/contrib_modules/radius/radius.html">
    <code>
     radius:Radius
    </code>
@@ -221,16 +295,6 @@
  </dt>
  <dd>
   Authenticates an user to a Radius server.
- </dd>
- <dt>
-  <a href="https://github.com/simplesamlphp/simplesamlphp-module-infocard/blob/master/README.md">
-   <code>
-    InfoCard:ICAuth
-   </code>
-  </a>
- </dt>
- <dd>
-  Authenticate with an InfoCard.
  </dd>
  <dt>
   <a href="./multiauth/multiauth.html">
@@ -241,14 +305,6 @@
  </dt>
  <dd>
   Allow the user to select from a list of authentication sources.
- </dd>
- <dt>
-  <code>
-   openid:OpenIDConsumer
-  </code>
- </dt>
- <dd>
-  Authenticate against an OpenID provider.
  </dd>
  <dt>
   <a href="./saml/sp.html">
@@ -267,23 +323,13 @@
  </dt>
  <dd>
   Authenticate with
-  <a href="http://www.yubico.com/products/yubikey/">
-   an YubiKey
+  <a href="https://www.yubico.com/products/yubikey/">
+   a YubiKey
   </a>
   .
  </dd>
  <dt>
-  <a href="./authfacebook/authfacebook.html">
-   <code>
-    authfacebook:Facebook
-   </code>
-  </a>
- </dt>
- <dd>
-  Authenticate with a Facebook ID.
- </dd>
- <dt>
-  <a href="./authtwitter/oauthtwitter.html">
+  <a href="/docs/contrib_modules/authtwitter/oauthtwitter.html">
    <code>
     authtwitter:Twitter
    </code>
