--- a/stable/simplesamlphp-install.html
+++ b/stable/simplesamlphp-install.html
@@ -90,12 +90,127 @@
 </header><main><h1 id="simplesamlphp-installation-and-configuration">
  SimpleSAMLphp Installation and Configuration
 </h1>
-<!-- 
-This file is written in Markdown syntax. 
-For more information about how to use the Markdown syntax, read here:
-http://daringfireball.net/projects/markdown/syntax
--->
-<!-- {{TOC}} -->
+<div class="toc">
+ <ul>
+  <li>
+   <a href="#simplesamlphp-installation-and-configuration">
+    SimpleSAMLphp Installation and Configuration
+   </a>
+   <ul>
+    <li>
+     <a href="#prerequisites">
+      Prerequisites
+     </a>
+    </li>
+    <li>
+     <a href="#download-and-install-simplesamlphp">
+      Download and install SimpleSAMLphp
+     </a>
+    </li>
+    <li>
+     <a href="#upgrading-from-a-previous-version-of-simplesamlphp">
+      Upgrading from a previous version of SimpleSAMLphp
+     </a>
+     <ul>
+      <li>
+       <a href="#upgrading-configuration-files">
+        Upgrading configuration files
+       </a>
+      </li>
+      <li>
+       <a href="#upgrading-metadata-files">
+        Upgrading metadata files
+       </a>
+      </li>
+     </ul>
+    </li>
+    <li>
+     <a href="#configuration">
+      Configuration
+     </a>
+     <ul>
+      <li>
+       <a href="#location-of-configuration-files">
+        Location of configuration files
+       </a>
+      </li>
+     </ul>
+    </li>
+    <li>
+     <a href="#configuring-apache">
+      Configuring Apache
+     </a>
+    </li>
+    <li>
+     <a href="#configuring-nginx">
+      Configuring Nginx
+     </a>
+    </li>
+    <li>
+     <a href="#simplesamlphp-configuration-configphp">
+      SimpleSAMLphp configuration: config.php
+     </a>
+    </li>
+    <li>
+     <a href="#configuring-php">
+      Configuring PHP
+     </a>
+     <ul>
+      <li>
+       <a href="#sending-e-mails-from-php">
+        Sending e-mails from PHP
+       </a>
+      </li>
+     </ul>
+    </li>
+    <li>
+     <a href="#enabling-and-disabling-modules">
+      Enabling and disabling modules
+     </a>
+    </li>
+    <li>
+     <a href="#the-simplesamlphp-installation-web-page">
+      The SimpleSAMLphp installation web page
+     </a>
+     <ul>
+      <li>
+       <a href="#check-your-php-environment">
+        Check your PHP environment
+       </a>
+      </li>
+     </ul>
+    </li>
+    <li>
+     <a href="#building-assets">
+      Building assets
+     </a>
+    </li>
+    <li>
+     <a href="#next-steps">
+      Next steps
+     </a>
+    </li>
+    <li>
+     <a href="#support">
+      Support
+     </a>
+    </li>
+    <li>
+     <a href="#appendix-installing-simplesamlphp-in-alternative-locations">
+      Appendix: Installing SimpleSAMLphp in alternative locations
+     </a>
+     <ul>
+      <li>
+       <a href="#tip">
+        Tip
+       </a>
+      </li>
+     </ul>
+    </li>
+   </ul>
+  </li>
+ </ul>
+</div>
 <p>
  This document is part of the SimpleSAMLphp documentation suite.
 </p>
@@ -928,7 +1043,7 @@ in a separate document.
   </ul>
  </li>
  <li>
-  <a href="https://github.com/simplesamlphp/simplesamlphp-module-metarefresh/blob/master/docs/simplesamlphp-automated_metadata.md">
+  <a href="/docs/contrib_modules/metarefresh/simplesamlphp-automated_metadata.html">
    Automated Metadata Management
   </a>
  </li>
